# metalgbm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: histogram.rs  lib.rs  tree.rs
